update dot fade, ensure no overlap in half section, fix twitter url, remove aos-offset from final project, style bio header

--- a/css/dots.css
+++ b/css/dots.css
@@ -7,6 +7,22 @@
   position: relative;
 }
 
+.dot::after {
+  content: '';
+  background-image:
+    linear-gradient(
+      to top,
+      rgba(30, 30, 30, 1) 0%,
+      rgba(30, 30, 30, 0.1) 100%
+    );
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 20%;
+}
+
 /* .dot::before {
   content: '';
   background-image:
